# shairport-view-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  metadata_gen_demo
src/: gui.rs  lib.rs  main_test.rs  meta_gen.rs
