[package]
name = "shairport-view-rs"
version = "0.1.0"
edition = "2021"
authors = ["Michael <michaels4208@gmail.com"]
license = "MIT"
keywords = ["shairport-sync", "AirPlay", "Metadata"]
description = "Rust GUI and CLI viewer for metadata produced by shairport-sync"
homepage = "https://github.com/michaels4208/shairport-view-rs"
default-run = "shairport_view_gui"

# [[bin]]
# name = "shairport_view_gui"
# src = "src/bin/shairport_view_gui.rs"
#
# [[bin]]
# name = "shairport_view_cli"

[dependencies]
fltk = { version = "1.3", features = ["fltk-bundled"] }
amxml = "0.5.3"
hex = "0.4.3"
signal-hook = "0.3.15"
ipipe = "0.11.7"
base64 = "0.21.0"